[tool.poetry]
name = "python-usp-starter-kit"
version = "0.1.0"
description = "A base oficial para desenvolvimento web e ciência de dados na USP."
authors = ["ayrtonnotrya <ayrtonnotrya@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
senhaunica-socialite-python = {git = "https://github.com/ime-usp-br/senhaunica-socialite-python.git"}
replicado-python = {git = "https://github.com/ime-usp-br/replicado-python.git"}
django = "^5.2"
django-environ = "^0.12.0"
whitenoise = "^6.11.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
django-extensions = "^4.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
